--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -10,11 +10,11 @@
                 <legend class="border-bottom mb-4">Register Now</legend>
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" required>
+                    <input type="text" class="form-control" id="username" name="username" required pattern="[^<>]*" title="Special characters not allowed.">
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
+                    <input type="password" class="form-control" id="password" name="password" required pattern="[^<>]*" title="Special characters not allowed.">
                 </div>
             </fieldset>
             <div class="form-group">
